--- a/foobarqix/foobarqix-services/pom.xml
+++ b/foobarqix/foobarqix-services/pom.xml
@@ -1,32 +1,42 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-   
- 
- 
-   <groupId>fr.wd.kata</groupId>
-    <artifactId>foobarqix-services</artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.3.5.RELEASE</version>
+	</parent>
+
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>fr.wd.kata</groupId>
+	<artifactId>foobarqix-services</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
+	<properties>
+		<java.version>1.8</java.version>
+		<junit.version>4.12</junit.version>
+		<mockito-all.version>2.0.2-beta</mockito-all.version>
+		<fest-assert.version>1.4</fest-assert.version>
+	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>fr.wd.kata</groupId>
+			<artifactId>foobarqix-dao</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
-  <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.5.RELEASE</version>
-    </parent>
-
-    <dependencies>
-         <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        
-        <!-- Test Dependency -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Test Dependency -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -45,37 +55,14 @@
 			<version>${fest-assert.version}</version>
 			<scope>test</scope>
 		</dependency>
-         
-    </dependencies>
+	</dependencies>
 
-    <properties>
-        <java.version>1.8</java.version>
-        
-        <junit.version>4.12</junit.version>
-		<mockito-all.version>2.0.2-beta</mockito-all.version>
-		<fest-assert.version>1.4</fest-assert.version>
-    </properties>
-
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
-<!--     <repositories> -->
-<!--         <repository> -->
-<!--             <id>spring-releases</id> -->
-<!--             <url>https://repo.spring.io/libs-release</url> -->
-<!--         </repository> -->
-<!--     </repositories> -->
-<!--     <pluginRepositories> -->
-<!--         <pluginRepository> -->
-<!--             <id>spring-releases</id> -->
-<!--             <url>https://repo.spring.io/libs-release</url> -->
-<!--         </pluginRepository> -->
-<!--     </pluginRepositories> -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
