--- a/foobarqix/foobarqix-services/pom.xml
+++ b/foobarqix/foobarqix-services/pom.xml
@@ -2,57 +2,48 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.5.RELEASE</version>
+		<groupId>fr.wd.kata</groupId>
+		<artifactId>foobarqix</artifactId>
+		<version>${project.version}</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.wd.kata</groupId>
 	<artifactId>foobarqix-services</artifactId>
-	<version>1.0-SNAPSHOT</version>
 
 	<properties>
 		<java.version>1.8</java.version>
-		<junit.version>4.12</junit.version>
-		<mockito-all.version>2.0.2-beta</mockito-all.version>
-		<fest-assert.version>1.4</fest-assert.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>fr.wd.kata</groupId>
 			<artifactId>foobarqix-dao</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
+		
+		<!-- Test Dependency -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- Test Dependency -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>${mockito-all.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.easytesting</groupId>
 			<artifactId>fest-assert</artifactId>
-			<version>${fest-assert.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
