--- a/foobarqix/foobarqix-testhelper/pom.xml
+++ b/foobarqix/foobarqix-testhelper/pom.xml
@@ -1,9 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-   
-  
-  
-  <groupId>fr.wd.kata</groupId>
-    <artifactId>foobarqix-testhelper</artifactId>
-	<version>1.0-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<parent>
+		<groupId>fr.wd.kata</groupId>
+		<artifactId>foobarqix</artifactId>
+		<version>${project.version}</version>
+	</parent>
+
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>foobarqix-testhelper</artifactId>
 </project>
