--- a/foobarqix/foobarqix-web/pom.xml
+++ b/foobarqix/foobarqix-web/pom.xml
@@ -3,15 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.5.RELEASE</version>
+		<groupId>fr.wd.kata</groupId>
+		<artifactId>foobarqix</artifactId>
+		<version>${project.version}</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>fr.wd.kata</groupId>
 	<artifactId>foobarqix-web</artifactId>
-	<version>1.0-SNAPSHOT</version>
 	<!-- <packaging>war</packaging> -->
 
 	<properties>
@@ -22,8 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>fr.wd.kata</groupId>
-			<artifactId>foobarqix-services</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<artifactId>foobarqix-services</artifactId>			 
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
