--- a/foobarqix/foobarqix-common/pom.xml
+++ b/foobarqix/foobarqix-common/pom.xml
@@ -9,4 +9,18 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>foobarqix-common</artifactId>
+	
+	
+	<dependencies>
+	<dependency>
+	    <groupId>javax.validation</groupId>
+	    <artifactId>validation-api</artifactId>
+	    <version>1.1.0.Final</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.16.8</version>
+	</dependency>
+	</dependencies>
 </project>
